k8s/01-simple-app/deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
 name: test-app 
spec: 
 replicas: 1 
 selector: 
  matchLabels: 
   app: test-app 
 template: 
  metadata: 
   labels: 
    app: test-app
  spec: 
   containers:
   - name: test-container 
     image: nginx:latest 
     ports: 
     - containerPort: 80
