k8s/01-simple-app/service.yaml
apiVersion: v1 
kind: Service 
metadata: 
 name: test-service 
spec: 
 selector: 
  app: test-app 
 ports:
 - protocol: TCP 
   port: 80 
   targetPort: 80 
 type: ClusterIP
