k8s/01-simple-app/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
 name: my-ingress 
spec:
 ingressClassName: azure-application-gateway 
 rules:
 - http: 
    paths:
     - path: /
       pathType: Prefix 
       backend:
        service: 
         name: test-service
         port:
          number: 80
